Align left fix

--- a/css/all.css
+++ b/css/all.css
@@ -3490,11 +3490,11 @@ div.aligncenter {
 
 .alignleft {
   float: left;
-  margin: 5px 20px 20px 0; }
+  margin: 0 20px 20px 0; }
 
 a img.alignright {
   float: right;
-  margin: 5px 0 20px 20px; }
+  margin: 0 0 20px 20px; }
 
 a img.alignnone {
   margin: 5px 20px 20px 0; }
@@ -3520,7 +3520,7 @@ a img.aligncenter {
   margin: 5px 20px 20px 0; }
 
 .wp-caption.alignleft {
-  margin: 0 20px 20px 0; }
+  margin: 5px 20px 20px 0; }
 
 .wp-caption.alignright {
   margin: 5px 0 20px 20px; }
