--- a/css/wordpress-core.scss
+++ b/css/wordpress-core.scss
@@ -15,16 +15,16 @@ div.aligncenter {
 
 .alignleft {
   float: left;
-  margin: 5px 20px 20px 0;
+  margin: 0 20px 20px 0;
 }
 
 a img.alignright {
   float: right;
-  margin: 5px 0 20px 20px;
+  margin: 0 0 20px 20px;
 }
 
 a img.alignnone {
-  margin: 5px 20px 20px 0;
+  margin: 5px 20px 20px 0;      
 }
 
 a img.alignleft {
@@ -51,7 +51,7 @@ a img.aligncenter {
 }
 
 .wp-caption.alignleft {
-  margin: 0 20px 20px 0;    
+  margin: 5px 20px 20px 0;
 }
 
 .wp-caption.alignright {
